Update pom.xml URL
Update <url> tag in pom.xml files to reflect location of the new gnmi
project.

Change-Id: I6b03070e5220aec7e1b099f947e3c7031305b2ec
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>

--- a/gnmi-modules/odl-gnmi-connector/pom.xml
+++ b/gnmi-modules/odl-gnmi-connector/pom.xml
@@ -20,7 +20,7 @@
     <artifactId>odl-gnmi-connector</artifactId>
 
     <name>${project.groupId}:${project.artifactId}</name>
-    <url>https://github.com/PANTHEONtech/lighty</url>
+    <url>https://lf-opendaylight.atlassian.net/wiki/spaces/ODL/pages/489062430/gNMI+project</url>
 
     <dependencies>
         <dependency>
