--- a/gnmi-modules/odl-gnmi-sb/pom.xml
+++ b/gnmi-modules/odl-gnmi-sb/pom.xml
@@ -23,7 +23,7 @@
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
-    <url>https://github.com/PANTHEONtech/lighty</url>
+    <url>https://lf-opendaylight.atlassian.net/wiki/spaces/ODL/pages/489062430/gNMI+project</url>
 
     <properties>
         <maven.javadoc.failOnWarnings>false</maven.javadoc.failOnWarnings>
