--- a/gnmi-models/odl-gnmi-models/odl-gnoi-sonic-yang-model/pom.xml
+++ b/gnmi-models/odl-gnmi-models/odl-gnoi-sonic-yang-model/pom.xml
@@ -20,6 +20,6 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
-    <url>https://github.com/PANTHEONtech/lighty</url>
+    <url>https://lf-opendaylight.atlassian.net/wiki/spaces/ODL/pages/489062430/gNMI+project</url>
 
 </project>
