Flatten models structure
Flatten org.opendaylight.gnmi.models to just org.opendaylight.gnmi
which gives us more simple project structure.

Change-Id: I902f82a8e0237cd12308e188912934e56e000153
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>

--- a/gnmi-models/odl-gnmi-models/odl-gnoi-sonic-yang-model/pom.xml
+++ b/gnmi-models/odl-gnmi-models/odl-gnoi-sonic-yang-model/pom.xml
@@ -15,7 +15,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>org.opendaylight.gnmi.models</groupId>
+    <groupId>org.opendaylight.gnmi</groupId>
     <artifactId>odl-gnoi-sonic-yang-model</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
