--- a/gnmi-models/odl-gnmi-models/odl-gnmi-certificates-storage-model/pom.xml
+++ b/gnmi-models/odl-gnmi-models/odl-gnmi-certificates-storage-model/pom.xml
@@ -17,7 +17,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>org.opendaylight.gnmi.models</groupId>
+    <groupId>org.opendaylight.gnmi</groupId>
     <artifactId>odl-gnmi-certificates-storage-model</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
