--- a/gnmi-models/odl-gnmi-models/odl-gnmi-force-capabilities/pom.xml
+++ b/gnmi-models/odl-gnmi-models/odl-gnmi-force-capabilities/pom.xml
@@ -17,7 +17,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>org.opendaylight.gnmi.models</groupId>
+    <groupId>org.opendaylight.gnmi</groupId>
     <artifactId>odl-gnmi-force-capabilities</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
@@ -34,12 +34,12 @@
             <artifactId>yang-ext</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.gnmi.models</groupId>
+            <groupId>org.opendaylight.gnmi</groupId>
             <artifactId>odl-gnmi-topology-model</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.gnmi.models</groupId>
+            <groupId>org.opendaylight.gnmi</groupId>
             <artifactId>odl-gnmi-yang-storage-model</artifactId>
             <version>${project.version}</version>
         </dependency>
