--- a/gnmi-models/openconfig-models/pom.xml
+++ b/gnmi-models/openconfig-models/pom.xml
@@ -16,7 +16,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>org.opendaylight.gnmi.models</groupId>
+    <groupId>org.opendaylight.gnmi</groupId>
     <artifactId>openconfig-models</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
