--- a/gnmi-modules/odl-gnmi-device-simulator/pom.xml
+++ b/gnmi-modules/odl-gnmi-device-simulator/pom.xml
@@ -74,11 +74,6 @@
             <artifactId>logback-classic</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>org.opendaylight.gnmi.models</groupId>
-            <artifactId>openconfig-models</artifactId>
-            <version>${project.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
@@ -89,6 +84,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.gnmi</groupId>
+            <artifactId>openconfig-models</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
