--- a/features/odl-gnmi/pom.xml
+++ b/features/odl-gnmi/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.opendaylight.gnmi</groupId>
         <artifactId>feature-parent</artifactId>
-        <relativePath>../parent/pom.xml</relativePath>
+        <relativePath>../feature-parent/pom.xml</relativePath>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
