Remove odl-gnmi-test from build
Remove odl-gnmi-test from build till we adapt it to work in ODL.

Change-Id: I694c43ab1c9f6b1d2cd9f5585bef7b92ff94a8d9
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>

--- a/gnmi-modules/pom.xml
+++ b/gnmi-modules/pom.xml
@@ -25,7 +25,7 @@
         <module>odl-gnmi-commons</module>
         <module>odl-gnmi-proto</module>
         <module>odl-gnmi-device-simulator</module>
-        <module>odl-gnmi-test</module>
+       <!-- FIXME Removed from build till adapted        <module>odl-gnmi-test</module>-->
         <module>odl-gnmi-sb</module>
     </modules>
 
