--- a/gnmi-modules/odl-gnmi-device-simulator/src/main/resources/simulator-data/simulator_config.json
+++ b/gnmi-modules/odl-gnmi-device-simulator/src/main/resources/simulator-data/simulator_config.json
@@ -2,11 +2,11 @@
   "gnmi_simulator": {
     "targetAddress": "127.0.0.1",
     "targetPort": 10161,
-    "certPath": "certificates/server.crt",
-    "certKeyPath": "certificates/server-pkcs8.key",
-    "initialConfigDataPath": "simulator/initialConfigJsonData.json",
-    "initialStateDataPath": "simulator/initialStateJsonData.json",
-    "yangsPath": "../../lighty-models/openconfig-models/src/main/yang",
+    "certPath": "src/main/resources/certs/server.crt",
+    "certKeyPath": "src/main/resources/certs/server-pkcs8.key",
+    "initialConfigDataPath": "src/main/resources/simulator-data/initialConfigJsonData.json",
+    "initialStateDataPath": "src/main/resources/simulator-data/initialStateJsonData.json",
+    "yangsPath": "../../gnmi-models/openconfig-models/src/main/yang",
     "username": "admin",
     "password": "admin",
     "schemaServiceConfig": {
