--- a/gnmi-modules/odl-gnmi-device-simulator/pom.xml
+++ b/gnmi-modules/odl-gnmi-device-simulator/pom.xml
@@ -108,6 +108,14 @@
             <artifactId>testng</artifactId>
             <version>7.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk18on</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+        </dependency>
 
         <!-- Loggers dependencies used in gnmi project -->
         <dependency>
