CI: Update GitHub Actions to latest versions
Update all upstream actions and reusable workflows to their latest
stable versions for improved security and functionality.

Remove RTD verification job from gnmi, with RTDv3
the job only need to reside in the odl/docs repo.

Changes:
- gerrit-review-action: v0.8 → v0.10.0
  (SHA: 9627b9a → 6d2e00d)

- releng-reusable-workflows: v0.2.21 → v0.2.28
  (SHA: 4231fda → b4c8bfd)
  - gerrit-compose-required-tox-verify.yaml
  - gerrit-compose-required-rtdv3-verify.yaml

Kept current (already latest):
- gerrit-change-info: v0.1.3 (ce31825)
- workflow-conclusion: v2.2.3 (e4f7c49)
- actions/checkout: v4
- actions/setup-python: v5.6.0 (a26af69)

Change-Id: I992b6d21b88f2418edb4465a5741e3325d381679
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -66,7 +66,7 @@ jobs:
       - name: Clear votes
         if: ${{ env.ACT != 'true' }}
         # yamllint disable-line rule:line-length
-        uses: lfit/gerrit-review-action@9627b9a144f2a2cad70707ddfae87c87dce60729 # v0.8
+        uses: lfit/gerrit-review-action@6d2e00dfd3173cd9a36d11350c8fba44731c7b4e # v0.10.0
         with:
           host: ${{ vars.GERRIT_SERVER }}
           username: ${{ vars.GERRIT_SSH_USER }}
@@ -134,7 +134,7 @@ jobs:
   call-gerrit-tox-verify:
     needs: [prepare, call-gerrit-change-info]
     # yamllint disable rule:line-length
-    uses: lfit/releng-reusable-workflows/.github/workflows/gerrit-compose-required-tox-verify.yaml@4231fda07b06d356c904fe39a868522393dee4bb # v0.2.21
+    uses: lfit/releng-reusable-workflows/.github/workflows/gerrit-compose-required-tox-verify.yaml@b4c8bfdea114d034bfa6ed2fe2c9775bc091d5ca # v0.2.28
     with:
       GERRIT_BRANCH: ${{ needs.call-gerrit-change-info.outputs.GERRIT_BRANCH }}
       GERRIT_CHANGE_ID: ${{ needs.call-gerrit-change-info.outputs.GERRIT_CHANGE_ID }}
@@ -147,27 +147,9 @@ jobs:
       GERRIT_REFSPEC: ${{ needs.call-gerrit-change-info.outputs.GERRIT_REFSPEC }}
       TOX_ENVS: '["docs","docs-linkcheck"]'
 
-  rtd-validation:
-    needs: [prepare, call-gerrit-change-info]
-    # yamllint disable rule:line-length
-    uses: lfit/releng-reusable-workflows/.github/workflows/gerrit-compose-required-rtdv3-verify.yaml@4231fda07b06d356c904fe39a868522393dee4bb # v0.2.21
-    with:
-      GERRIT_BRANCH: ${{ needs.call-gerrit-change-info.outputs.GERRIT_BRANCH }}
-      GERRIT_CHANGE_ID: ${{ needs.call-gerrit-change-info.outputs.GERRIT_CHANGE_ID }}
-      GERRIT_CHANGE_NUMBER: ${{ needs.call-gerrit-change-info.outputs.GERRIT_CHANGE_NUMBER }}
-      GERRIT_CHANGE_URL: ${{ needs.call-gerrit-change-info.outputs.GERRIT_CHANGE_URL }}
-      GERRIT_EVENT_TYPE: ${{ needs.call-gerrit-change-info.outputs.GERRIT_EVENT_TYPE }}
-      GERRIT_PATCHSET_NUMBER: ${{ needs.call-gerrit-change-info.outputs.GERRIT_PATCHSET_NUMBER }}
-      GERRIT_PATCHSET_REVISION: ${{ needs.call-gerrit-change-info.outputs.GERRIT_PATCHSET_REVISION }}
-      GERRIT_PROJECT: ${{ needs.call-gerrit-change-info.outputs.GERRIT_PROJECT }}
-      GERRIT_REFSPEC: ${{ needs.call-gerrit-change-info.outputs.GERRIT_REFSPEC }}
-      TARGET_REPO: ${{ inputs.TARGET_REPO || github.repository }}
-    secrets:
-      RTD_TOKEN: ${{ secrets.RTD_TOKEN }}
-
   vote:
     if: ${{ always() }}
-    needs: [call-gerrit-tox-verify, rtd-validation, call-gerrit-change-info]
+    needs: [call-gerrit-tox-verify, call-gerrit-change-info]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     # yamllint disable rule:line-length
@@ -179,7 +161,7 @@ jobs:
         if: ${{ env.ACT != 'true' }}
       - name: Set vote
         if: ${{ env.ACT != 'true' }}
-        uses: lfit/gerrit-review-action@9627b9a144f2a2cad70707ddfae87c87dce60729 # v0.8
+        uses: lfit/gerrit-review-action@6d2e00dfd3173cd9a36d11350c8fba44731c7b4e # v0.10.0
         with:
           host: ${{ vars.GERRIT_SERVER }}
           username: ${{ vars.GERRIT_SSH_USER }}
