--- a/project.config
+++ b/project.config
@@ -1,7 +1,7 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+	action = rebase if necessary
 [access "refs/*"]
 	owner = group saml/odl-gerrit-gnmi-committers
 	read = group GitHub Replication
