Fix lighty-gnmi-proto dependencies
Add missing undeclared dependencies and order them alphabetically.

Change-Id: Ic6c484f46900df8682e7474eec3267f92cd319e2
Signed-off-by: tobias.pobocik <tobias.pobocik@pantheon.tech>

--- a/gnmi-modules/odl-gnmi-proto/pom.xml
+++ b/gnmi-modules/odl-gnmi-proto/pom.xml
@@ -29,8 +29,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>${protobuf.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.grpc</groupId>
-            <artifactId>grpc-netty</artifactId>
+            <artifactId>grpc-api</artifactId>
             <version>${grpc.version}</version>
         </dependency>
         <dependency>
@@ -42,20 +51,6 @@
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
             <version>${grpc.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.protobuf</groupId>
-            <artifactId>protobuf-java</artifactId>
-            <version>${protobuf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.protobuf</groupId>
-            <artifactId>protobuf-java-util</artifactId>
-            <version>${protobuf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.annotation</groupId>
-            <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
     </dependencies>
 
@@ -101,6 +96,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
